bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - MultiGrouped1 (Execution Plan).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(site_label@0) as site_label, ENC_PT(wtur_label@1) as wtur_label, year@2 as year, month@3 as month, day@4 as day, hour@5 as hour, minute_10@6 as minute_10, ENC_PT(<uuid>@7) as val_prod_avg, ENC_PT(<uuid>@8) as val_dir_avg, ENC_PT(<uuid>@9) as val_speed_avg]
  AggregateExec: mode=Single, gby=[site_label@0 as site_label, wtur_label@1 as wtur_label, ENC_PT(year@9) as year, ENC_PT(month@8) as month, ENC_PT(day@7) as day, ENC_PT(hour@6) as hour, ENC_PT(minute_10@5) as minute_10], aggr=[<uuid>, <uuid>, <uuid>]
    CoalesceBatchesExec: target_batch_size=8192
      FilterExec: EBV(BOOLEAN_AS_TERM(EBV(BOOLEAN_AS_TERM(EBV(BOOLEAN_AS_TERM(EBV(EQ(ENC_TV(site_label@0), 3:{value:Wind Mountain,language:})) AND EBV(EQ(ENC_TV(wtur_label@1), 3:{value:A1,language:})))) AND EBV(GEQ(ENC_TV(t@3), 10:{value:6379744601300.0000000000000000,offset:})))) AND EBV(LEQ(ENC_TV(t@3), 10:{value:6379749281300.0000000000000000,offset:})))), projection=[site_label@0, wtur_label@1, val_speed@2, val_dir@4, val_prod@5, minute_10@6, hour@7, day@8, month@9, year@10]
        ProjectionExec: expr=[site_label@1 as site_label, wtur_label@2 as wtur_label, val_speed@3 as val_speed, t@4 as t, val_dir@5 as val_dir, val_prod@6 as val_prod, minute_10@7 as minute_10, hour@8 as hour, day@9 as day, MONTH(__common_expr_1@0) as month, YEAR(__common_expr_1@0) as year]
          ProjectionExec: expr=[ENC_TV(t@4) as __common_expr_1, site_label@1 as site_label, wtur_label@2 as wtur_label, val_speed@3 as val_speed, t@4 as t, val_dir@5 as val_dir, val_prod@6 as val_prod, MUL(9:10, FLOOR(DIV(MINUTES(__common_expr_3@0), 7:Some(<uuid>),36,16))) as minute_10, HOURS(__common_expr_3@0) as hour, DAY(__common_expr_3@0) as day]
            ProjectionExec: expr=[ENC_TV(t@3) as __common_expr_3, site_label@0 as site_label, wtur_label@1 as wtur_label, val_speed@2 as val_speed, t@3 as t, val_dir@4 as val_dir, val_prod@5 as val_prod]
              CoalesceBatchesExec: target_batch_size=8192
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp_prod@5, dp_prod@0), (t@3, t@1)], projection=[site_label@0, wtur_label@1, val_speed@2, t@3, val_dir@4, val_prod@6]
                  CoalesceBatchesExec: target_batch_size=8192
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp_prod@5, dp_prod@0)], projection=[site_label@0, wtur_label@1, val_speed@2, t@3, val_dir@4, dp_prod@5, val_prod@7]
                      CoalesceBatchesExec: target_batch_size=8192
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts_prod@5, ts_prod@0)], projection=[site_label@0, wtur_label@1, val_speed@2, t@3, val_dir@4, dp_prod@7]
                          CoalesceBatchesExec: target_batch_size=8192
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts_prod@5, ts_prod@0)], projection=[site_label@0, wtur_label@1, val_speed@2, t@3, val_dir@4, ts_prod@5]
                              CoalesceBatchesExec: target_batch_size=8192
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, val_speed@3, t@4, val_dir@5, ts_prod@7]
                                  CoalesceBatchesExec: target_batch_size=8192
                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts_dir@5, ts_dir@0)], projection=[site_label@0, wtur_label@1, generator@2, val_speed@3, t@4, val_dir@6]
                                      CoalesceBatchesExec: target_batch_size=8192
                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp_dir@6, dp_dir@0), (t@4, t@1)], projection=[site_label@0, wtur_label@1, generator@2, val_speed@3, t@4, ts_dir@5, val_dir@7]
                                          CoalesceBatchesExec: target_batch_size=8192
                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp_dir@6, dp_dir@0)], projection=[site_label@0, wtur_label@1, generator@2, val_speed@3, t@4, ts_dir@5, dp_dir@6, val_dir@8]
                                              CoalesceBatchesExec: target_batch_size=8192
                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts_dir@5, ts_dir@0)], projection=[site_label@0, wtur_label@1, generator@2, val_speed@3, t@4, ts_dir@5, dp_dir@7]
                                                  CoalesceBatchesExec: target_batch_size=8192
                                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(weather@3, weather@0)], projection=[site_label@0, wtur_label@1, generator@2, val_speed@4, t@5, ts_dir@7]
                                                      CoalesceBatchesExec: target_batch_size=8192
                                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts_speed@4, ts_speed@0)], projection=[site_label@0, wtur_label@1, generator@2, weather@3, val_speed@5, t@6]
                                                          CoalesceBatchesExec: target_batch_size=8192
                                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp_speed@5, dp_speed@0)], projection=[site_label@0, wtur_label@1, generator@2, weather@3, ts_speed@4, val_speed@6, t@8]
                                                              CoalesceBatchesExec: target_batch_size=8192
                                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp_speed@5, dp_speed@0)], projection=[site_label@0, wtur_label@1, generator@2, weather@3, ts_speed@4, dp_speed@5, val_speed@7]
                                                                  CoalesceBatchesExec: target_batch_size=8192
                                                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts_speed@4, ts_speed@0)], projection=[site_label@0, wtur_label@1, generator@2, weather@3, ts_speed@4, dp_speed@6]
                                                                      CoalesceBatchesExec: target_batch_size=8192
                                                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(weather@3, weather@0)], projection=[site_label@0, wtur_label@1, generator@2, weather@3, ts_speed@5]
                                                                          CoalesceBatchesExec: target_batch_size=8192
                                                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(weather@3, weather@0)], projection=[site_label@0, wtur_label@1, generator@2, weather@3]
                                                                              CoalesceBatchesExec: target_batch_size=8192
                                                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(weather_asp@3, weather_asp@1)], projection=[site_label@0, wtur_label@1, generator@2, weather@4]
                                                                                  CoalesceBatchesExec: target_batch_size=8192
                                                                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, generator@3, weather_asp@5]
                                                                                      CoalesceBatchesExec: target_batch_size=8192
                                                                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@3, generator@0)], projection=[site_label@0, wtur_label@1, wtur@2, generator@3]
                                                                                          CoalesceBatchesExec: target_batch_size=8192
                                                                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@3, generator_asp@1)], projection=[site_label@0, wtur_label@1, wtur@2, generator@4]
                                                                                              CoalesceBatchesExec: target_batch_size=8192
                                                                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@3, gensys@0)], projection=[site_label@0, wtur_label@1, wtur@2, generator_asp@5]
                                                                                                  CoalesceBatchesExec: target_batch_size=8192
                                                                                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@3, gensys@0)], projection=[site_label@0, wtur_label@1, wtur@2, gensys@3]
                                                                                                      CoalesceBatchesExec: target_batch_size=8192
                                                                                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@3, gensys_asp@1)], projection=[site_label@0, wtur_label@1, wtur@2, gensys@4]
                                                                                                          CoalesceBatchesExec: target_batch_size=8192
                                                                                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, wtur@2, gensys_asp@4]
                                                                                                              CoalesceBatchesExec: target_batch_size=8192
                                                                                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, wtur@2]
                                                                                                                  CoalesceBatchesExec: target_batch_size=8192
                                                                                                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@1)], projection=[site_label@0, wtur_label@2, wtur@3]
                                                                                                                      CoalesceBatchesExec: target_batch_size=8192
                                                                                                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@0)], projection=[site_label@0, wtur_asp@1, wtur_label@3]
                                                                                                                          CoalesceBatchesExec: target_batch_size=8192
                                                                                                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site_label@1, wtur_asp@3]
                                                                                                                              CoalesceBatchesExec: target_batch_size=8192
                                                                                                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@2]
                                                                                                                                  DataSourceExec: [GPOS] subject=?site, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#Site>
                                                                                                                                  DataSourceExec: [GPOS] subject=?site, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?site_label, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                                                              DataSourceExec: [GPOS] subject=?site, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?wtur_asp, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                                                          DataSourceExec: [GPOS] subject=?wtur_asp, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?wtur_label, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                                                      DataSourceExec: [GPOS] subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?wtur_asp, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                                                  DataSourceExec: [GPOS] subject=?wtur, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#A>, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                                              DataSourceExec: [GPOS] subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?gensys_asp, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                                          DataSourceExec: [GPOS] subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?gensys_asp, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                                      DataSourceExec: [GPOS] subject=?gensys, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#RA>, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                                  DataSourceExec: [GPOS] subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?generator_asp, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                              DataSourceExec: [GPOS] subject=?generator, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?generator_asp, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                          DataSourceExec: [GPOS] subject=?generator, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#GAA>, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                      DataSourceExec: [GPOS] subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?weather_asp, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                                  DataSourceExec: [GPOS] subject=?weather, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?weather_asp, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                              DataSourceExec: [GPOS] subject=?weather, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#LE>, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                          DataSourceExec: [GPOS] subject=?weather, predicate=<https://github.com/magbak/chrontext#hasTimeseries>, object=?ts_speed, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                      DataSourceExec: [GPOS] subject=?ts_speed, predicate=<https://github.com/magbak/chrontext#hasDataPoint>, object=?dp_speed, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                                  DataSourceExec: [GPOS] subject=?dp_speed, predicate=<https://github.com/magbak/chrontext#hasValue>, object=?val_speed, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                              DataSourceExec: [GPOS] subject=?dp_speed, predicate=<https://github.com/magbak/chrontext#hasTimestamp>, object=?t, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                          DataSourceExec: [GPOS] subject=?ts_speed, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object="Windspeed", additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                      DataSourceExec: [GPOS] subject=?weather, predicate=<https://github.com/magbak/chrontext#hasTimeseries>, object=?ts_dir, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                                  DataSourceExec: [GPOS] subject=?ts_dir, predicate=<https://github.com/magbak/chrontext#hasDataPoint>, object=?dp_dir, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                              DataSourceExec: [GPOS] subject=?dp_dir, predicate=<https://github.com/magbak/chrontext#hasValue>, object=?val_dir, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                          DataSourceExec: [GPOS] subject=?dp_dir, predicate=<https://github.com/magbak/chrontext#hasTimestamp>, object=?t, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                      DataSourceExec: [GPOS] subject=?ts_dir, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object="WindDirection", additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                  DataSourceExec: [GPOS] subject=?generator, predicate=<https://github.com/magbak/chrontext#hasTimeseries>, object=?ts_prod, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                              DataSourceExec: [GPOS] subject=?ts_prod, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object="Production", additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                          DataSourceExec: [GPOS] subject=?ts_prod, predicate=<https://github.com/magbak/chrontext#hasDataPoint>, object=?dp_prod, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                      DataSourceExec: [GPOS] subject=?dp_prod, predicate=<https://github.com/magbak/chrontext#hasValue>, object=?val_prod, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                  DataSourceExec: [GPOS] subject=?dp_prod, predicate=<https://github.com/magbak/chrontext#hasTimestamp>, object=?t, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
